--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-  "preview": "vite preview --host --port $PORT"
+    "preview": "vite preview --host --port $PORT",
+    "start:server": "node server/index.js"
   },
   "dependencies": {
     "react": "^19.1.1",
